2014-02-11  Martin Reiche  <reiche.stud@googlemail.com>

	* func/preprocess.m: Job subfolder of results path gets deleted
	after the last subject was preprocessed.

	* func/eeg_rejection.m: Implemented new channel location path.

	* func/save_erp.m: Implemented now channel location path.

	* eeg_analysis.m: In parallel mode an additional subfolder
	indicating the Job ID is now appended to the results path where
	temopral data files are stored throughout the preprocessing.

	* config.m: An additional path for the channel location file is
	now included separately from the results path because this now
	gets modified with an additional job subfolder in parallel mode.

2014-02-10  Martin Reiche  <reiche.stud@googlemail.com>

	* triggerlabels.m (triggerlabels): Added additional argument
	indicating condition number for retriggering routine.

	* func/eeg_rejection.m: Fixed a bug in the epoching routine for
	selecting multiple events in one block.

	* func/change_trig.m: There was a bug in the retrigger
	routine. Fixed. Function needs one more argument now indicating
	the number of the condition of the current block in order to work.

2014-02-07  Martin Reiche  <reiche.stud@googlemail.com>

	* lib/subplotERP.m (subplotERP): Plotting of component markers,
	significant intervals and baseline markers for the single-clicked
	ERP plots were in wrong layer order. Fixed.

2014-02-06  Martin Reiche  <reiche.stud@googlemail.com>

	* eeg_analysis.m (eeg_analysis): New method for displaying usable
	data per subject implemented. When calling
	eeg_analysis(task,subjects,'usabledata',threshold) the user now
	gets prompted to select an ERP file and the amount of usable data
	per subject as well as the amount of usable data overall for the
	current ERP file is displayed. A rejection threshold for an
	acceptable amount of usable data must be given. Subjects below
	this threshold are marked for rejection. A vector of subject
	numbers still within the acceptable threshold is